stretch: add fixed nav w/ transparent bg

--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,8 @@ html,
 body {
   font-family: 'Ubuntu', sans-serif;
   color: #5E6164;
+  display: flex;
+  flex-direction: column;
 }
 h1,
 h2,
@@ -167,13 +169,15 @@ a {
 }
 .nav-container {
   border-bottom: 1px solid #F1F1F1;
-  background: #F6F6F6;
+  background: rgba(246, 246, 246, 0.8);
   width: 100%;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  height: 100px;
 }
 .nav-container nav {
   margin-top: 10px;
@@ -198,6 +202,7 @@ footer {
   align-items: center;
 }
 .home {
+  margin-top: 100px;
   margin-bottom: 5px;
 }
 .home .intro h2 {
@@ -261,6 +266,11 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
+@media (max-width:500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
@@ -288,23 +298,18 @@ footer {
     padding: 20px;
   }
 }
-@media (max-width:500px) {
-  .home .walk .walk-text {
-    width: 100%;
-  }
-}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
-}
-.home .walk .walk-img img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
 }
 @media (max-width:500px) {
   .home .walk .walk-img {
     width: 100%;
     margin: 0 0 15px 0;
   }
+}
+.home .walk .walk-img img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
