--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,8 @@ html {
 html, body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
+  display:flex;
+  flex-direction: column;
 }
 
 h1, h2, h3, h4, h5 {
