--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,8 @@
 // Home Content
 
 .home {
+  // border:1px solid cyan;
+  margin-top:100px;
 
   margin-bottom:5px;
 
@@ -66,18 +68,19 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-
     @media @phone {
       // border:2px solid cyan;
       flex-direction: column-reverse;
       align-items: center;
-      width:100%;
-      padding:15px;
+      .mobile-style();
       margin:0;
     }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width:100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -89,33 +92,26 @@
 
       .btn {
         .btn(@btn-bg-color, @porcelain);
-
         @media @phone {
           width:100%;
           padding:20px;
         }
       }
-
-      @media @phone {
-          // border:1px solid red;
-          width:100%;
-        }
-      }
+    }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width:100%;
+        margin:0 0 15px 0;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
       }
-
-      @media @phone {
-          width:100%;
-          margin:0 0 15px 0;
-        }
     }
   } // walk
 }// home
