--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,3 +14,8 @@
         color:@bg;
     }
 }
+
+.mobile-style() {
+    width:100%;
+    padding:15px;
+}
