--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,7 @@
 .nav-container {
     border-bottom:1px solid @nav-border;
-    background:@nav-bg;
+    background:rgba(246,246,246,0.8);
+    // opacity:0.8;
     width:100%;
     padding:10px 0;
     display:flex;
@@ -24,4 +25,9 @@
         }
 
     }
+
+    // border:1px solid magenta;
+    position:fixed;
+    height:100px;
+
 }
